fix: fix some post

--- a/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
+++ b/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
@@ -22,9 +22,7 @@ mermaid: true
 
 # 거리 공간에서의 open set의 정의
 
-거리 공간 $(S, d)$ 가 주어질 때,
-
-$\forall p \in S, \forall \epsilon > 0 : B_{\epsilon}(p) := \{ x \in S \ | \ d(x, p) < \epsilon \}$ 를 정의 할 수 있다.
+거리 공간 $(S, d)$ 가 주어질 때, $\forall p \in S, \forall \epsilon > 0 : B_{\epsilon}(p) := \{ x \in S \ | \ d(x, p) < \epsilon \}$ 를 정의 할 수 있다.
 
 이 때 $(S, d)$ 에서의 open set은 $B_{\epsilon}(p)$ 들의 임의의 합집합(arbitrary union) 으로 정의된다.
 
