fix: some files

--- a/_posts/2024-12-05-블로그-시작.md
+++ b/_posts/2024-12-05-블로그-시작.md
@@ -1,6 +1,7 @@
 ---
 title: 블로그 시작합니다.
 author: pbkpch3514
+description: 블로그 시작
 date: 2024-12-05 15:57:00 +0900
 categories: [블로그]
 tags: [잡다한 거]
@@ -9,7 +10,9 @@ render_with_liquid: false
 
 ## 너 누군데?
 
-국민대학교 소프트웨어학부를 졸업했고, 국민대학교 대학원 컴퓨터공학과 졸업 예정인 학생입니다.
+국민대학교 소프트웨어학부를 졸업했고, 국민대학교 대학원 컴퓨터공학과 졸업 예정인 학생입니다. \
+학창 시절에는 수학/물리를 되게 좋아했습니다(물리는 지금 다 까먹은 듯... 시간 있다면 역학 쪽 다시 공부하고 싶네요). \
+학부 와서는 다소 해맸던 것 같습니다. 코딩도 처음이기도 했고, 여러모로 낯설었기 때문에요. \
 
 
 졸업 후, 취업 준비를 하면서 기록의 중요성을 느끼고 있어서 블로그를 통해 글을 남기고자 합니다.
