--- a/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
+++ b/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
@@ -13,7 +13,30 @@ mermaid: true
 # 랜덤변수?
 
 우리는 랜덤 변수(혹은 확률 변수)를 이미 고등학교 때 배웠습니다. \
-다들 랜덤 변수를 물어보면 대부분 잘 모른다고 하거나 이렇게 말할 겁니다. \
+다들 랜덤 변수를 물어보면 대부분 잘 모른다고 하거나 이렇게 말할 겁니다.
 > 동전 앞면을 0, 뒷면을 1로 두고 그걸 $X$ 이런식으로 표현하지 않나?
 
-네, 틀린 말은 아니지만, 너무 허술합니다. 엄밀하게 정의를 해야 합니다.
+
+네, 틀린 말은 아니지만, 너무 허술합니다. 엄밀하게 정의를 해야 합니다. \
+수학은 논리에 빈 틈이 없어야 하니까요.
+
+
+랜덤 변수는 늘 어떠한 확률공간에서 정의가 되어집니다. \
+그렇다면 확률 공간은 뭘까요?
+
+
+> Sample Space $S$와 $\sigma$-field $\mathcal{F}$, 그리고 확률 측도 $\mathbb{P}$를 모은 $(S, \mathcal{F}, \mathbb{P})$를 확률 공간이라 한다.
+
+Sample Space는 우리가 시행을 했을 때 나올 수 있는 모든 결과들을 모아놓은 곳입니다. \
+동전 하나를 던지는 시행을 생각하면, 이 때 Sample Space의 원소는 앞면, 뒷면이 되겠죠.
+
+그러면 저 $\sigma$-field는 정체가 뭐냐? 사건들의 집합입니다. \
+동전을 던지는 예를 생각하면, 앞면만 나오는 경우만 고려하고 싶을 때가 있고, 뒷면만 나오는 경우를 고려하고 싶을 때가 있고 모든 경우를 고려하고 싶을 때가 있죠. 그 것들을 모아놓은 집합입니다. \
+그러면 $\sigma$-field의 원소는 어떨까요? Sample Space의 부분집합입니다. 
+
+$\sigma$-field는 다음과 같이 정의됩니다.
+
+어떤 집합 $S$가 주어지고 그의 Power set $P(S)$의 부분집합 $\mathcal{F}$가 다음 성질을 만족하면 $\mathcal{F}$를 $\sigma$-field라고 한다.
+1. $\phi \in \mathcal{F}$
+2. $E \in \mathcal{F} \implies E^c \in \mathcal{F}$
+3. $E_1, E_2, \cdots \in \mathcal{F} \implies \bigcup_{n=1}^{\infty} E_n \in F$
