--- a/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
+++ b/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
@@ -21,15 +21,23 @@ mermaid: true
 수학은 논리에 빈 틈이 없어야 하니까요.
 
 
+## 확률 공간의 정의
+
 랜덤 변수는 늘 어떠한 확률공간에서 정의가 되어집니다. \
 그렇다면 확률 공간은 뭘까요?
 
 
 > Sample Space $S$와 $\sigma$-field $\mathcal{F}$, 그리고 확률 측도 $\mathbb{P}$를 모은 $(S, \mathcal{F}, \mathbb{P})$를 확률 공간이라 한다.
 
-Sample Space는 우리가 시행을 했을 때 나올 수 있는 모든 결과들을 모아놓은 곳입니다. \
-동전 하나를 던지는 시행을 생각하면, 이 때 Sample Space의 원소는 앞면, 뒷면이 되겠죠.
+Sample Space 말고는 다 외계어 같습니다. 이를 하나씩 천자문 읊는 느낌으로 정의해보겠습니다.
 
+### 표본 공간 (Sample Space)
+Sample Space는 우리가 시행을 했을 때 나올 수 있는 모든 결과들을 모아놓은 곳입니다. \
+동전 하나를 던지는 시행을 생각하면, 이 때 Sample Space의 원소는 앞면, 뒷면이 되겠죠. \
+그냥 어떤 집합 $S$ 진짜 아무거나 생각해도 그게 표본 공간이 될 수 있습니다.
+
+
+### $\sigma$-field, 당신은 누구세요?
 그러면 저 $\sigma$-field는 정체가 뭐냐? 사건들의 집합입니다. \
 동전을 던지는 예를 생각하면, 앞면만 나오는 경우만 고려하고 싶을 때가 있고, 뒷면만 나오는 경우를 고려하고 싶을 때가 있고 모든 경우를 고려하고 싶을 때가 있죠. 그 것들을 모아놓은 집합입니다. \
 그러면 $\sigma$-field의 원소는 어떨까요? Sample Space의 부분집합입니다. 
@@ -39,4 +47,84 @@ $\sigma$-field는 다음과 같이 정의됩니다.
 어떤 집합 $S$가 주어지고 그의 Power set $P(S)$의 부분집합 $\mathcal{F}$가 다음 성질을 만족하면 $\mathcal{F}$를 $\sigma$-field라고 한다.
 1. $\phi \in \mathcal{F}$
 2. $E \in \mathcal{F} \implies E^c \in \mathcal{F}$
-3. $E_1, E_2, \cdots \in \mathcal{F} \implies \bigcup_{n=1}^{\infty} E_n \in F$
+3. $E_1, E_2, \cdots \in \mathcal{F} \implies \bigcup_{i=1}^{\infty} E_i \in F$
+
+
+정리하자면 이런거죠.
+1. 아무 일도 안 일어나는 것도 사건이야.
+2. 어떤 사건이 발생하면, 그 사건이 안 일어나는 것도 사건이야.
+3. 사건들을 엄청 많이 모은 것도 사건이야.
+
+### 확률 측도?
+확률은 친숙한데 확률 측도는 처음 듣는 사람이 많을 겁니다.\
+확률 밀도는 알아도 확률 측도는 모른다고요?\
+전자가 후자보다 훨씬 어려운 개념이라는 걸 공부하다 보면 아실겁니다.
+
+확률 측도(Probability Measure)는 함수인데요. 이렇게 정의 할 수 있습니다.
+
+어떤 함수 $\mathbb{P} : \mathcal{F} \to [0, 1]$가 다음 성질을 만족하면, 함수 $\mathbb{P}$를 Probability Measure라고 부른다.
+1. $\mathbb{P}(\phi) = 0$
+2. $A_1, A_2, \cdots \text{is disjoint} \implies \mathbb{P}(\bigcup_{i=1}^{\infty} A_i) = \sum_{i=1}^{\infty}\mathbb{P}(A_i)$
+
+## 랜덤 변수에 꼭 필요한 Borel $\sigma$-field
+
+잘 나가다가 왜 갑자기 급커브 트냐고요? \
+이걸 알아야 랜덤 변수를 제대로 정의 할 수 있습니다. \
+Borel $\sigma$-field는 위상을 기반으로 정의하므로 우리는 잠깐 위상에 대해 알 필요가 있습니다.
+
+
+### 위상의 정의
+위상의 정의는 엄청 어려울 것 같지만 생각보다 단순합니다.
+
+어떤 집합 $S$가 주어지고 $S$의 Power set $P(S)$의 부분집합 $T$가 다음 조건을 만족하면 $T$를 위상이라 하고 $(S, T)$를 위상 공간이라 부른다.
+1. $S, \phi \in T$
+2. $\forall i \in I, \ V_i \in T \implies \bigcup_{i\in I}V_i \in T$ (arbitrary union에 닫혀있다.)
+3. $V_1, V_2 \in T \implies V_1 \cap V_2 \in T$ (finite intersection에 닫혀있다.)
+
+$T$의 원소를 우리는 open set(열린 집합)이라고 부릅니다.
+
+흔히 위상 공간은 찰흙으로 비유가 많이 되곤 합니다.
+1. 공간 전체도 찰흙 덩어리다.
+2. 찰흙 끼리 임의로 뭉쳐도 찰흙 덩어리다.
+3. 찰흙끼리 유한 번 겹친 부분도 찰흙 덩어리다.
+
+### 다시 돌아와서...
+증명을 여기서 다루지는 않겠지만 $\sigma$-field와 관련한 중요한 성질이 있습니다.
+
+어떤 집합 $S$가 주어지고 $P(S)$의 부분집합 $\mathcal{F}^{'}$을 선택하자.\
+이 때 $\mathcal{F}^{'}$를 포함하는 가장 작은 $\sigma$-field $\mathcal{F}$는 유일하게 존재한다.
+
+이런 성질을 응용하면, $S$에 대한 위상공간 $T$를 포함하는 가장 작은 $\sigma$-field $\mathcal{F}$ 또한 유일하게 존재할 것이다.
+
+### Borel $\sigma$-field를 굳이?
+아까 위상은 찰흙덩어리라고 생각하자고 했다. 위상에서는 크기라는 개념이 존재하지 않는다. 찰흙을 생각하면 끊어지지 않는 이상 마구 늘리고 줄일 수 있어서 크기를 생각하는게 애초에 의미가 없다.
+
+반면, $\sigma$-field를 생각하면, 확률 측도 $\mathbb{P}$를 통해서 사건에 대응되는 값, 즉 길이를 잴 수 있다
+
+그렇다면 둘을 결합하면, 찰흙덩어리의 길이를 잴 수 있지 않을까? \
+그렇게 해서 만들어진 것이 Borel $\sigma$-field다.
+
+## 대체 랜덤 변수는 뭔데?
+
+다 왔다. 이제 랜덤 변수를 정의할 재료는 충분히 모았다.\
+확률 공간$(S, \mathcal{F}, \mathbb{P})$와 실수 집합 $\mathbb{R}$의 Borel $\sigma$-field $B(\mathbb{R})$이 주어질 때,\
+함수 $X: (S, \mathcal{F}) \to (\mathbb{R}, \ B(\mathbb{R}))$ 이 다음 조건을 만족하면, $X$를 Random Variable(랜덤 변수)라고 한다.
+$$ \forall B \in B(\mathbb{R}) : X^{-1}(B) \in \mathcal{F}$$
+
+### 저렇게 까지 정의 해야 하는가?
+그렇다. 우리 흔히 $\mathbb{P}(a \leq X \leq b)$ 이런거를 계산하는데, $[a, b]$는 $B(\mathbb{R})$의 원소다. 우리는 사건의 길이 밖에 못 재는데, 저 구간의 길이는 어떻게 재는가?
+
+그렇다. 랜덤 변수를 활용하면 된다. 저렇게 정의 하니까 임의의 Borel Set $B$에 대한 $X$의 역상은 $\sigma$-field $\mathcal{F}$의 원소다. 그리고 
+$\mathcal{F}$의 원소의 길이는 확률 측도 $\mathbb{P}$로 잴 수 있다!
+
+그렇다면, 함수 $\mu_{X} : B(\mathbb{R}) \to [0, 1]$을 정의하여 $\mu_{X}(B) = \mathbb{P}(X^{-1}(B))$로 정의 하면 구간의 크기도 잴 수 있다. 이 때 함수 $\mu_{X}$를 랜덤 변수 $X$에 대한 분포라고 한다.\
+확률 공간에서 분포와 같은 개념을 정의하려면, 랜덤 변수가 필요한 것이다.
+
+## 결론
+우리는 지금 까지 랜덤 변수에 대해 알아보았다.\
+Borel $\sigma$-field는 실수함수가 가지는 대부분의 구간을 전부 가지고 있기 때문에, 랜덤변수를 빈틈 없이 정의할 수 있도록 해준다.\
+랜덤변수는 어떠한 확률 공간에 대해서 분포를 부여해준다.\
+이로써, 우리는 확률론의 시작인 랜덤 변수에 대해서 빈 틈 없이 기술할 수 있게 되었다.
+
+읽어주셔서 감사합니다.
+
