fix: some posts

--- a/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
+++ b/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
@@ -1,7 +1,8 @@
 ---
 title: 랜덤변수가 뭔데?
 description: 랜덤변수를 엄밀하게 기술하기
-author: pbkpch3514
+author: 
+  name: pbkpch3514
 date: 2024-12-06 12:00:00 +0900
 categories: [수학, 확률론]
 tags: [수학, 랜덤변수, 위상수학]
