--- a/_posts/2024-12-05-블로그-시작.md
+++ b/_posts/2024-12-05-블로그-시작.md
@@ -1,6 +1,7 @@
 ---
 title: 블로그 시작합니다.
-author: pbkpch
+author:
+  name: pbkpch3514
 description: 블로그 시작
 date: 2024-12-05 15:57:00 +0900
 categories: [블로그]
