fix: rewrite some posts

--- a/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
+++ b/_posts/2024-12-06-랜덤변수 엄밀하게 정의하기.md
@@ -1,8 +1,6 @@
 ---
 title: 랜덤변수가 뭔데?
 description: 랜덤변수를 엄밀하게 기술하기
-author: 
-  name: pbkpch3514
 date: 2024-12-06 12:00:00 +0900
 categories: [수학, 확률론]
 tags: [수학, 랜덤변수, 위상수학]
@@ -77,12 +75,12 @@ Borel $\sigma$-field는 위상을 기반으로 정의하므로 우리는 잠깐 
 ### 위상의 정의
 위상의 정의는 엄청 어려울 것 같지만 생각보다 단순합니다.
 
-어떤 집합 $S$가 주어지고 $S$의 Power set $P(S)$의 부분집합 $T$가 다음 조건을 만족하면 $T$를 위상이라 하고 $(S, T)$를 위상 공간이라 부른다.
-1. $S, \phi \in T$
-2. $\forall i \in I, \ V_i \in T \implies \bigcup_{i\in I}V_i \in T$ (arbitrary union에 닫혀있다.)
-3. $V_1, V_2 \in T \implies V_1 \cap V_2 \in T$ (finite intersection에 닫혀있다.)
+어떤 집합 $S$가 주어지고 $S$의 Power set $P(S)$의 부분집합 $\mathfrak{T}$가 다음 조건을 만족하면 $T$를 위상이라 하고 $(S, \mathfrak{T})$를 위상 공간이라 부른다.
+1. $S, \phi \in \mathfrak{T}$
+2. $\forall i \in I, \ V_i \in \mathfrak{T} \implies \bigcup_{i\in I}V_i \in \mathfrak{T}$ (arbitrary union에 닫혀있다.)
+3. $V_1, V_2, \cdots, V_n \in \mathfrak{T} \implies \bigcap_{i=1}^n V_i \in \mathfrak{T}$ (finite intersection에 닫혀있다.)
 
-$T$의 원소를 우리는 open set(열린 집합)이라고 부릅니다.
+$\mathfrak{T}$의 원소를 우리는 open set(열린 집합)이라고 부릅니다.
 
 흔히 위상 공간은 찰흙으로 비유가 많이 되곤 합니다.
 1. 공간 전체도 찰흙 덩어리다.
